--- a/codecorner.css
+++ b/codecorner.css
@@ -14,6 +14,7 @@ nav {
 #index-banner h1{
   color: white
 }
+
 .card {
 	width: 22%;
 	float: left;
@@ -22,6 +23,15 @@ nav {
 	margin-bottom: 20px;
 }
 
-.card .card-content p {
-	margin-bottom: 1em;
+.card.small .card-content {
+	padding: 12px;
+}
+
+.score, .voting {
+	float: left;
+	width: 50%;
+}
+
+.controls-wrapper {
+	margin-bottom: 10px;
 }
