changed picture and color scheme

--- a/client/stylesheets/codecorner.css
+++ b/client/stylesheets/codecorner.css
@@ -61,3 +61,12 @@ nav {
 .post-link {
 	font-size: 16pt;
 }
+
+.jumbotron {
+	font-family:"Lucida Sans Unicode";
+}
+
+/*.sign-in-font {
+	font-size: 16pt ;
+	font-family:"Arial Black";
+}*/
