--- a/client/stylesheets/colors.css
+++ b/client/stylesheets/colors.css
@@ -1,32 +1,27 @@
+/* CSS - Cascading Style Sheet */
 /* Palette color codes */
-/* Palette URL: http://paletton.com/#uid=15a0u0kllllaFw0g0qFqFg0w0aF */
+/* Palette URL: http://paletton.com/#uid=13L0u0kncpydL-Pi+t1qIlgvagn */
 
 /* Feel free to copy&paste color codes to your application */
 
 
 /* As hex codes */
 
-.color-primary-0, a:link.color-primary-0 { color: #882D61 }	/* Main Primary color */
-.color-primary-1, a:link.color-primary-1 { color: #CD88AF }
-.color-primary-2, a:link.color-primary-2 { color: #AA5585 }
-.color-primary-3, a:link.color-primary-3 { color: #661141 }
-.color-primary-4, a:link.color-primary-4 { color: #440027 }
-
-.background-color-primary-0 { background-color: #882D61 }	/* Main Primary color */
-.background-color-primary-1 { background-color: #CD88AF }
-.background-color-primary-2 { background-color: #AA5585 }
-.background-color-primary-3 { background-color: #661141 }
-.background-color-primary-4 { background-color: #440027 }
+.color-primary-0 { color: #304B88 }	/* Main Primary color */
+.color-primary-1 { color: #7186B7 }
+.color-primary-2 { color: #49629B }
+.color-primary-3 { color: #1D3671 }
+.color-primary-4 { color: #0B2257 }
 
 
 
 /* As RGBa codes */
 
-.rgba-primary-0 { color: rgba(136, 45, 97,1) }	/* Main Primary color */
-.rgba-primary-1 { color: rgba(205,136,175,1) }
-.rgba-primary-2 { color: rgba(170, 85,133,1) }
-.rgba-primary-3 { color: rgba(102, 17, 65,1) }
-.rgba-primary-4 { color: rgba( 68,  0, 39,1) }
+.rgba-primary-0 { color: rgba( 48, 75,136,1) }	/* Main Primary color */
+.rgba-primary-1 { color: rgba(113,134,183,1) }
+.rgba-primary-2 { color: rgba( 73, 98,155,1) }
+.rgba-primary-3 { color: rgba( 29, 54,113,1) }
+.rgba-primary-4 { color: rgba( 11, 34, 87,1) }
 
 
 
