added background colors

--- a/client/stylesheets/colors.css
+++ b/client/stylesheets/colors.css
@@ -13,6 +13,11 @@
 .color-primary-3 { color: #1D3671 }
 .color-primary-4 { color: #0B2257 }
 
+.background-color-primary-0 { background-color: #304B88 }	/* Main Primary color */
+.background-color-primary-1 { background-color: #7186B7 }
+.background-color-primary-2 { background-color: #49629B }
+.background-color-primary-3 { background-color: #1D3671 }
+.background-color-primary-4 { background-color: #0B2257 }
 
 
 /* As RGBa codes */
