--- a/client/stylesheets/codecorner.css
+++ b/client/stylesheets/codecorner.css
@@ -11,6 +11,7 @@ nav {
   height: 100px;
 }
 
+
 .card-image, .card-image img {
 	position: relative;
 }
@@ -49,6 +50,11 @@ nav {
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-bottom: 20px;
+}
+
+.login-link-text {
+	font-size: 30px;
+	text-decoration: none !important;
 }
 
 .main-cardlist .card.small .card-content {
