--- a/client/stylesheets/codecorner.css
+++ b/client/stylesheets/codecorner.css
@@ -35,7 +35,7 @@ nav {
 
 #brand-logo {
   margin-top: 16px;
-  margin-right: 10px;
+  margin-left: 120px;
   font-size: 32pt;
 }
 
@@ -122,4 +122,9 @@ nav {
 input.inputblur {
 	font-size: 20pt;
 	font-weight: bold;
+}
+
+.logo {
+  margin-left:120;
+
 }
