--- a/client/stylesheets/codecorner.css
+++ b/client/stylesheets/codecorner.css
@@ -16,6 +16,7 @@ nav {
   font-color: #ffffff;*/
   background-color: #1D3671 ;
     color:white;
+     border-radius: 10px;
 }
 
 .card-image, .card-image img {
