posting page and page displaying pots fixed

--- a/client/stylesheets/codecorner.css
+++ b/client/stylesheets/codecorner.css
@@ -164,11 +164,11 @@ input.inputblur {
 
 .submit {
   font-family:'Cookie';
-  font-size: 24pt;
+  font-size: 18pt;
   float: right;
   margin: 20pt;
   -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+  transition-duration: 0.4s;
 
 }
 
@@ -191,6 +191,7 @@ input.inputblur {
   font-family: "Lucida Sans Unicode";
   font-size: 12pt;
   margin-bottom: 10pt;
+
 }
 
 .type{
@@ -202,5 +203,11 @@ input.inputblur {
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
+    color:black;
 }
 
+.btn {
+  text-transform: lowercase;
+  padding: none;
+  margin:none;
+}
